# HappyPose_ROS1_wrapper

./: README.md
HappyPose Files/: boundingbox.json  camera_data.json  object_pose.json  objects_map.json
happypose_ros/: CMakeLists.txt  package.xml
happypose_ros/launch/: detectObjectFromRealSense.launch
happypose_ros/scripts/: HappyPoseService.py  run_inference.py  setup.py
happypose_ros/src/: happypose_ros.cpp
happypose_ros/srv/: HappyPoseService.srv
ros_imresize/launch/: imresize_fixed.launch
ros_imresize/src/: image_handler.cpp
