<?xml version="1.0"?>
<package format="2">
  <name>happypose_ros</name>
  <version>0.1.0</version>
  <description>This is a ROS package for happy pose.</description>

  <author email="mattia.poggiani@iit.it">Mattia Poggiani</author>
  <maintainer email="mattia.poggiani@iit.it">Mattia Poggiani</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend> 
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>message_runtime</depend>

  <test_depend>gtest</test_depend>

  <export>
    <python-cmake-install dest="share/happypose_ros/python">
      <script src="${prefix}/scripts/setup.py"/>
    </python-cmake-install>
  </export>

</package>

